fix #16: add logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 server.port=5500
 
+# Allowed path
 transfer.path=/transfer
 confirm_operation.path=/confirmOperation
+
+# Logger configuration
+logging.file.path=.
+logging.file.name=app.log
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%-5level] %msg%n
